# todo

./: .gitignore  Cargo.toml  README.md  justfile
applet/: Cargo.toml
applet/data/: dev.robledo.OutlookTasks.desktop  dev.robledo.OutlookTasks.metainfo.xml  dev.robledop.OutlookTasks.desktop  dev.robledop.OutlookTasks.metainfo.xml
applet/src/: app.rs  config.rs  consts.rs  main.rs  note.rs  notify.rs  reminders.rs  settings.rs  state.rs  task_form.rs
core/: Cargo.toml
core/src/: error.rs  graph.rs  lib.rs  models.rs
core/src/auth/: authenticator.rs  loopback.rs  mod.rs  oauth.rs  store.rs
core/tests/: authenticator_test.rs  graph_integration.rs  graph_test.rs  loopback_test.rs  models_test.rs  oauth_test.rs  store_test.rs
core/tests/common/: mod.rs
flatpak/: dev.robledop.OutlookTasks.json
