[workspace]
resolver = "2"
# `applet` is added to this list once the crate exists. Keeping it
# out until then means `cargo` commands don't fail loading a
# missing `applet/Cargo.toml`.
members = ["core", "applet"]

[workspace.package]
edition = "2024"
# oo7 0.6's MSRV is 1.92; pin the toolchain floor so CI/builds don't pick an
# older Rust that fails to compile the dependency.
rust-version = "1.92"
license = "GPL-3.0-only"
