[package]
name = "cosmic-applet-outlook-tasks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
outlook-tasks-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
# Used directly to build the shared reqwest::Client handed to GraphClient.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
open = "5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
# Already in the build tree via libcosmic; used for today's date and due-date formatting.
chrono = "0.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# Pinned to a known master revision for reproducible builds.
rev = "cca48bc29ef7a9f22160c0ab6ba117ab22d1ae87"
features = ["applet", "applet-token", "dbus-config", "multi-window", "tokio", "wayland", "winit"]
