[package]
name = "outlook-tasks-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oo7 = "0.6"
tiny_http = "0.12"
url = "2"
percent-encoding = "2"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time"] }
log = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
